--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/style": "^0.8.0",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.10",
     "@next/font": "13.1.1",
     "antd": "^5.1.4",
     "axios": "^1.3.2",
+    "cloudinary-build-url": "^0.2.4",
     "dotenv": "^16.0.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "javascript-time-ago": "^2.5.9",
     "luxon": "^3.2.1",
+    "material": "^0.5.3",
+    "meilisearch": "^0.31.1",
     "next": "13.1.1",
     "nextjs": "^0.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
+    "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.6.2",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
