--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.1.4",
     "axios": "^1.3.2",
     "cloudinary-build-url": "^0.2.4",
+    "disqus-react": "^1.1.5",
     "dotenv": "^16.0.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
@@ -31,6 +32,7 @@
     "react-markdown": "^8.0.5",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.6.2",
+    "react-safe": "^1.3.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
     "surge": "^0.23.1"
@@ -40,6 +42,7 @@
     "@types/react": "18.0.27",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.6"
   }
 }
