update search, module error, time, css font

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/style": "^0.8.0",
     "@emotion/styled": "^11.10.6",
+    "@meilisearch/instant-meilisearch": "^0.11.1",
     "@mui/material": "^5.11.10",
     "@next/font": "13.1.1",
     "antd": "^5.1.4",
@@ -29,6 +30,7 @@
     "nextjs": "^0.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-instantsearch-dom": "^6.39.0",
     "react-markdown": "^8.0.5",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.6.2",
