--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-instantsearch-dom": "^6.39.0",
+    "react-live-clock": "^6.1.13",
     "react-markdown": "^8.0.5",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.6.2",
